--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,10 @@
 body {
-  background-color: #f6f8fa;
-  font-family: "roboto", sans-serif;
+  background-color: #c86b85;
+  font-family: "Montserrat", sans-serif;
 }
+
 a {
-  color: #b1c2d3;
+  color: #c86b85;
 }
 .app {
   background-color: white;
@@ -14,11 +15,11 @@ a {
   border-radius: 16px;
 }
 header {
-  border-bottom: 1px, solid #f6f8fa;
+  border-bottom: 1px, solid #f3aab5;
   padding: 0 0 30px 0;
 }
 .search-form-input {
-  background-color: #f6f8fa;
+  background-color: #f3aab5;
   border: none;
   border-radius: 6px;
   width: 80%;
@@ -26,7 +27,7 @@ header {
   padding: 15px 20px;
 }
 .search-form-button {
-  background-color: #b1c2d3;
+  background-color: #f3aab5;
   padding: 15px 20px;
   border: none;
   border-radius: 6px;
@@ -35,7 +36,7 @@ header {
   margin-left: 5px;
 }
 footer {
-  border-top: 1px, solid #f6f8fa;
+  border-top: 1px, solid #f3aab5;
   padding: 30px 0 0 0;
   text-align: center;
   font-size: 13px;
